ch7/panic-to-result-usage/tests/fails/empty_panic.stderr
error: panic needs a message!

         = help: try to add a message: `panic!("message")`
         = note: we will add the message to Result's Err

 --> tests/fails/empty_panic.rs:6:9
  |
6 |         panic!();
  |         ^^^^^^^^^
